bin/testsuite/tests/compiler/src/errors/compiler5723.swg
#global testerror "Err0666"

alias A = 1